[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "probedo"
version = "0.0.1"
authors = [
  { name="Cameron F Abrams", email="cfa22@drexel.edu" },
]
description = "Extract info from PDB fils"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pidibble>=1.1.3"
]
[project.urls]
"Source" = "https://github.com/cameronabrams/probedo"
"Documentation" = "https://probedo.readthedocs.io/en/latest/"
"Bug Tracker" = "https://github.com/cameronabrams/probedo/issues"
[tool.pytest.ini_options]
log_cli = true
[project.scripts]
probedo = "probedo.probedo:cli"